--- a/src/styling/PollPage.css
+++ b/src/styling/PollPage.css
@@ -64,9 +64,10 @@ margin-bottom:25px;
 
 }
   /*BACK AND NEXT BUTTONS FOUND HERE!*/
-  .button-container {
+  .nav-button-container {
     display: flex;
     justify-content: space-around; 
+    margin-top:-10vh;
   }
   
 .nextbutton {
